# wa2-vscode-extension

./: .gitignore  Cargo.toml  README-release.md  README.md
.cargo/: config.toml
.github/workflows/: build.yml
assets/images/: wa2 logo square.xcf  wa2 logo wide.xcf
cli/wa2/: Cargo.toml
client/wa2/: .gitignore  .vscode-test  .vscodeignore  CHANGELOG.md  README.md  language-configuration-wa2.json  language-configuration.json  package-lock.json  package.json  update.sh
examples/: intrinsics.yaml
examples/test-project/: main.wa2  wa2.toml
examples/tutorial/: 0.data.yaml  1.calm.yaml  1.data.yaml  2.data.yaml  (+7 more)
server/stackgraph-lsp/: Cargo.toml  bacon.toml
server/stackgraph-lsp/src/: core_engine.rs  main.rs
server/wa2lsp/: Cargo.toml  bacon.toml
server/wa2lsp/src/: backend.rs  core_engine.rs  lib.rs  main.rs  server.rs  wa2_config.rs
server/wa2lsp/src/iaac/cloudformation/: spec_cache.rs
server/wa2lsp/src/intents/: Cargo.toml  evaluator.rs  evaluator2.rs  guidance.rs  mod.rs  model.rs  node.rs  system.rs  test_support.rs
server/wa2lsp/src/intents/kernel/: ast.rs  lexer.rs  loader.rs  lower.rs  mod.rs  parser.rs  query.rs  resolver.rs  rules.rs
server/wa2lsp/src/spec/: cfn_ir.rs  intrinsics.rs  mod.rs  registry_store.rs  spec_cache.rs  spec_source.rs  spec_store.rs  symbol_table.rs  type_resolver.rs
server/wa2lsp/src/spec/cfn_ir/: display.rs  json.rs  mod.rs  parser.rs  tests.rs  types.rs  validation.rs  yaml.rs
server/wa2lsp/src/spec/code_utils/: names.rs
server/wa2lsp/tests/: fixtures.rs
server/wa2lsp/tests/fixtures/cfn-lint/: README.md
(+11 files in other folders)
