[package]
name = "stackgraph-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0       # no optimisations
debug = 1           # enough for backtraces, smaller than 2
lto = false
codegen-units = 256 # more parallelism, worse perf but faster compile
incremental = true  # default in dev, but make it explicit if you like