[package]
name = "wa2lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
bytes = "1.11"
url = "2.5"
thiserror = "2.0"
blake3 = "1.8.2"
dirs = "6.0.0"
flate2 = "1.1.7"
saphyr = "0.0.6"
jsonc-parser = "0.28"
